--- a/style/s.css
+++ b/style/s.css
@@ -27,6 +27,7 @@ body {
 }
 
 .nav {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -56,7 +57,9 @@ body {
 }
 
 .container {
-  padding: 0 120px;
+  padding: 0 15px;
+
+  width:  1663px;
   margin: 0 auto;
 }
 
@@ -68,7 +71,8 @@ body {
 }
 
 .box1 p {
-  width: 572px;
+  max-width:572px;
+  width: 100%;
   font-weight: 600;
   font-size: 61px;
   line-height: 83px;
@@ -233,7 +237,8 @@ body {
 
 .it0 {
   margin-top: 40px;
-  width: 401px;
+  max-width: 401px;
+  width: 100%;
   height: 401px;
   background: #f2f3f7;
   border-radius: 100px;
@@ -282,7 +287,8 @@ body {
 }
 
 .right {
-  width: 790px;
+  max-width: 790px;
+  width: 100%;
   height: 561px;
   background: #c0e444;
   border-radius: 100px;
@@ -329,7 +335,8 @@ body {
 }
 
 .rightbox h2 {
-  width: 300px;
+  max-width: 300px;
+  width: 100%;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
@@ -452,7 +459,8 @@ body {
 }
 
 .Name_rightss {
-  width: 416px;
+  max-width: 416px;
+  width: 100%;
 
 }
 
@@ -577,7 +585,8 @@ color: #FFFFFF;
   width: 50%;
 }
 .line{
-  width: 1663px;
+  max-width: 1663px;
+  width: 100%;
   margin: 40px auto; 
   
   border: 1px solid #FFFFFF;
