--- a/style/style.css
+++ b/style/style.css
@@ -175,7 +175,7 @@ button {
 }
 
 .advantages__card {
-    max-width: 321px;
+    max-width: 379px;
     width: 100%;
     border-radius: 100px;
     background: #F2F3F7;
@@ -183,9 +183,11 @@ button {
     padding: 40px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     position: relative;
     overflow: hidden;
+
 
 }
 
@@ -211,7 +213,6 @@ button {
 
 }
 
-.course_title {}
 
 .course_content_box {
     max-width: 790px;
@@ -350,7 +351,7 @@ button {
     align-items: flex-start;
     justify-content: space-between;
     padding: 56px;
-    height: 336px;
+    height: 413px;
 
 }
 
@@ -371,21 +372,32 @@ button {
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
+}
+.certificate_content_title p{
+    font-weight: 400;
+font-size: 25px;
+line-height: 34px;
+display: flex;
+align-items: flex-end;
+margin-top: 16px;
+color: #555351;
 
 }
-
 .certificate_content_title {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
     max-width: 583px;
-    height: 220px;
+    width: 100%;
+    height: 303px;
 
 }
 
 .certificate_box a i {
     margin-left: 16px;
+    
+
 }
 
 .certificate_content_card {
@@ -394,8 +406,9 @@ button {
 }
 
 .certificate_content_card img {
+    max-width: 478px; 
     width: 100%;
-    height: 100%;
+height: 301px;
 }
 
 
@@ -591,13 +604,22 @@ button {
     color: #FFFFFF;
 }
 
-/* @media(min-width: 1399.7px) {
+@media(min-width: 1399.7px) {
     .container{
     max-width: 1320px;
     width: 100%;
     }
-} */
+   
+}
 
+@media(max-width: 1399.7px) {
+    .advantages__cards {
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+        gap: 20px;
+    }
+}
 
 
 
@@ -612,8 +634,6 @@ button {
 
     .header__content .container {
         flex-direction: column;
-        margin: 0 auto;
-        text-align: center;
         width: 100%;
         justify-content: center;
     }
@@ -626,7 +646,7 @@ button {
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-evenly;
-        grid-template: 20px;
+        gap: 10px;
     }
 
     .course .container {
@@ -653,10 +673,97 @@ button {
 
     }
     .apps{
+        /* flex-wrap: wrap; */
+    }
+    .course_title{
+        flex-direction: row;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: start;
+        display: block;
     }
 
 }
 
-/* @media (max-width: 768px) {}
-@media (max-width: 576px) {} */
+ @media (max-width: 768px) {
+    .header__nav-tel {
+        display: none;
+    }
+
+    .header__list {
+        display: none;
+    }
+   
+    
+    .advantages__cards {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        gap: 10px;
+    }
+    .course_content_box img{
+        max-width: 300px;
+        width: 100%;
+
+    }  
+    .course_content_box a{
+        margin-top: 40px;
+    }
+    .course_content_box{
+        min-height: 740px;
+        flex-direction: column;
+        padding: 32px;
+        border-radius: 50px;
+    }  
+    .certificate_box{
+        flex-direction: column-reverse;
+        height: 600px;
+        padding: 24px;
+        border-radius: 50px;
+        align-items: center;
+        justify-content: center;
+
+    }
+    
+.certificate_content_card img {
+    width: 100%;
+    height: 201px;
+}
+
+.certificate_content_title {
+    align-items: center;
+    justify-content: center;
+}
+.apps{
+    margin-top: 40px;
+    gap: 30px;
+    flex-direction: column;
+}
+.footer-icon_top {
+    flex-direction: column;
+}
+.certificate_content_title div{
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.footer-icon_end{
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.adress{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-icon_end p{
+    margin: 10px 0;
+    text-align: center;
+}
+
+
+
+ }
+/* @media (max-width: 576px) {}  */
