--- a/style/style.css
+++ b/style/style.css
@@ -190,12 +190,52 @@ button {
 
 
 }
+.advantages__card-texts p{
+    font-weight: 400;
+font-size: 20px;
+line-height: 27px;
+display: flex;
+align-items: flex-end;
 
-.advantages__card::before {
+color: #555351;
+
+    
+
+}
+.advantages__card-texts h3{
+    font-weight: 700;
+font-size: 25px;
+line-height: 34px;
+/* identical to box height */
+
+display: flex;
+align-items: flex-end;
+
+/* Accent Color/Black 100 */
+
+color: #1C1917;
+
+}
+
+/* .advantages__card::before {
     content: url(/img/Rectangle\ 5.png);
     position: absolute;
     top: 0;
     right: 0;
+} */
+.advantages__card img{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.advantages__cards2 img{
+    position: absolute;
+    top: 151px;
+    right: 0;
+}
+.advantages__cards2 {
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
@@ -225,7 +265,7 @@ button {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-top: 10px;
+    margin-bottom: 30px;
     overflow: hidden;
 
 }
@@ -234,6 +274,21 @@ button {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+.course_content_boxs1 img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.course_content_boxs1{
+    display: flex;
+    align-items: end;
+    background: #2DCACC;
+    
+
+}
+.course_content_box_color{
+    background: #7F71B1;
 }
 
 .course_content_box a {
@@ -648,7 +703,10 @@ height: 301px;
         justify-content: space-evenly;
         gap: 10px;
     }
-
+  
+    .header__content-image img{
+        border-radius: 60px;
+    }
     .course .container {
         flex-wrap: wrap;
         align-items: center;
@@ -747,6 +805,18 @@ height: 301px;
     margin-top: 10px;
     margin-bottom: 20px;
 }
+.advantages__card{
+    border-radius: 60px;
+}
+.karta img{
+    border-radius: 60px;
+}
+.footer_content{
+    border-radius: 60px;
+}
+.footer-icon {
+    border-radius:70    px 70px 0px 0px; ;
+}
 .footer-icon_end{
     align-items: center;
     justify-content: center;
@@ -762,6 +832,7 @@ height: 301px;
     margin: 10px 0;
     text-align: center;
 }
+
 
 
 
