--- a/style/style.css
+++ b/style/style.css
@@ -659,6 +659,130 @@ height: 301px;
     color: #FFFFFF;
 }
 
+
+/*=====================================Sertifiqat.html=======================================*/
+.verification_content{
+    height: 471px;
+
+background: #F2F3F7;
+border-radius: 100px;
+margin-top: 64px;
+padding: 56px;
+
+
+}
+.verification_content_text{
+    max-width: 383px;
+    width: 100%;
+    margin-left: 40px;
+    flex-direction: column;
+
+}
+.verification_content_left img{
+    width: 100%;
+    max-width: 527px;
+    height: 359px;
+}
+.verification_content_text h1{
+    font-weight: 600;
+font-size: 39px;
+line-height: 53px;
+
+/* Accent Color/Black 100 */
+
+color: #1C1917;
+
+}
+.verification_content{
+    align-items: start;
+}
+.verification_content_text p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+margin: 16px 0 32px;    
+    color: #555351;
+    
+}
+.verification_content_text input{
+    font-weight: 400;
+font-size: 16px;
+line-height: 20px;
+color: #555351;
+background: #FAFAFD;
+border: 0.5px solid #C6C5C5;
+border-radius: 100px;
+padding: 24px 25px;
+width: 100%;
+}
+.verification_content_texts{
+    font-weight: 400;
+font-size: 16px;
+line-height: 22px;
+/* identical to box height */
+margin-top: 10px;
+text-align: center;
+cursor: pointer;
+
+/* Accent Color/Black 50 */
+
+color: #8D8C8B;
+    
+}
+.verification_content_text i{
+    margin-left: 8px;
+}
+.verification_content_textp{
+    margin: 0px !important;
+
+}
+.verification_content_text_down {
+    padding: 24px 36px;
+background: #C0E444;
+border-radius: 100px;
+margin-top: 20px;
+display: block;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+color: white;
+}
+.verification_content_text a:hover{
+    opacity: .5;
+}
+
+
+
+
+
+
+
+
+
+
+/*===================================================end========================================*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media(min-width: 1399.7px) {
     .container{
     max-width: 1320px;
@@ -739,6 +863,17 @@ height: 301px;
         align-items: center;
         justify-content: start;
         display: block;
+    }
+    .verification_content{
+        flex-direction: column;
+        height: 800px;
+        text-align: center;
+        align-items: center;
+        border-radius: 66px;
+        padding: 24px;
+
+    }
+    .verification_content_left{
     }
 
 }
